# task_management_api

./: .env  README.md  main.py  pyproject.toml
.claude/skills/database-sqlmodel-neon/: SKILL.md  best-practices.md  examples.md
.claude/skills/fastapi-builder/: SKILL.md  best-practices.md
.claude/skills/fastapi-crud/: SKILL.md  examples.md  reference.md
.claude/skills/hostel-expense-tracker/: README.md  SKILL.md  examples.md  reference.md
.claude/skills/hostel-expense-tracker/scripts/: init_project.py
.claude/skills/pytest-tester/: SKILL.md  best-practices.md  pytest.ini
.claude/skills/skill-builder/: SKILL.md  examples.md  reference.md
.claude/skills/skill-builder/scripts/: create-skill.sh
auth/: auth.py  dependencies.py
database/: __init__.py  config.py  database.py
models/: __init__.py  task.py  user.py
routers/: __init__.py  auth.py  task.py  user.py
schemas/: __init__.py  task.py  user.py
tests/: test_api.py  test_tasks.py  test_user_signup.py
